--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ requires-python = ">=3.13"
 dependencies = [
     "cssselect>=1.3.0",
     "httpx>=0.28.1",
+    "httpx-retries>=0.4.5",
     "lxml>=6.0.1",
     "pymupdf>=1.26.4",
     "requests>=2.31.0",
-    "tenacity>=9.1.2",
     "tqdm>=4.67.1",
 ]
 
